--- a/olympics/requirements.txt
+++ b/olympics/requirements.txt
@@ -1,8 +1,9 @@
 asgiref==3.2.3
+dj-config-url==0.1.1
 Django==2.1.15
 gunicorn==20.0.4
 psycopg2==2.8.4
 python-decouple==3.3
 pytz==2019.3
 sqlparse==0.3.0
-whitenoise==5.0.1
+whitenoise==3.3.1
